deployment/3-kubernetes/judge/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-a-service
  labels:
    app: ms-a
spec:
  selector:
      app: ms-a
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 3000
  type: ClusterIP
